add readme files for data sets

--- a/Classification data.ipynb
+++ b/Classification data.ipynb
@@ -64,7 +64,7 @@
     "## test\n",
     "pre1 = pd.read_csv('data/dataset/Wheat_dt/DT_test-1.csv',header=None)\n",
     "pre2 = pd.read_csv('data/dataset/Wheat_dt/DT_test-2.csv',header=None)\n",
-    "pre3 = pd.read_csv('data/dataset/Wheat_dt/DT_test-3.csv',header=None)"
+    "pre3 = pd.read_csv('data/dataset/Wheat_dt/DT_test-3.csv',header=None)\n"
    ],
    "id": "1dd52cd095f7b614",
    "outputs": [],
@@ -3825,7 +3825,7 @@
    },
    "cell_type": "code",
    "source": [
-    "model_name =\"_ViT_1D_OSSL_\"  \n",
+    "model_name =\"_ViT_1D_wheat_\"  \n",
     "spec_dims = x_cal.shape[1]\n",
     "LR = 0.01\n",
     "num_epochs = 1000\n",
