--- a/Mango_data.ipynb
+++ b/Mango_data.ipynb
@@ -2718,7 +2718,7 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "model_name =\"_ResNET18_OSSL_\"  \n",
+    "model_name =\"_ResNET18_Mango_\"  \n",
     "spec_dims = x_cal.shape[1]\n",
     "LR = 0.01\n",
     "num_epochs = 1000\n",
@@ -3979,7 +3979,7 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "model_name =\"_ViT_1D_OSSL_\"  \n",
+    "model_name =\"_ViT_1D_Mango_\"  \n",
     "spec_dims = x_cal.shape[1]\n",
     "LR = 0.01\n",
     "num_epochs = 1000\n",
